--- a/aquamon/api/package.json
+++ b/aquamon/api/package.json
@@ -35,7 +35,8 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "socket.io": "^4.6.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "typeorm": "^0.3.13"
   },
   "devDependencies": {
